adding gtc slides

--- a/leili.bib
+++ b/leili.bib
@@ -182,7 +182,7 @@
 }
 
 @InProceedings{ru2020active,
-  author    = {Dongyu Ru and Jiangtao Feng and Lin Qiu and Hao Zhou and MIngxuan Wang and Weinan Zhang and Yong Yu and Lei Li},
+  author    = {Dongyu Ru and Jiangtao Feng and Lin Qiu and Hao Zhou and Mngxuan Wang and Weinan Zhang and Yong Yu and Lei Li},
   booktitle = {the Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings},
   title     = {Active Sentence Learning by Adversarial Uncertainty Sampling in Discrete Space},
   year      = {2020},
@@ -1215,22 +1215,22 @@ clickbait detection and generic text classification tasks demonstrate that our p
   timestamp = {2011.03.05},
 }
 
-@Article{li2010parsimonious,
+@InProceedings{li2010parsimonious,
   author     = {Li, Lei and Prakash, B. Aditya and Faloutsos, Christos},
+  booktitle  = {the Proceedings of the Very Large Data Bases Endowment (VLDB)},
   title      = {Parsimonious linear fingerprinting for time series},
-  journal    = {The Proceedings of the Very Large Data Bases Endowment (VLDB)},
   year       = {2010},
-  volume     = {3},
-  pages      = {385--396},
   month      = sep,
-  issn       = {2150-8097},
+  pages      = {385--396},
+  publisher  = {VLDB Endowment},
+  volume     = {3},
   acmid      = {1920893},
   file       = {:pubs/li2010parsimonious - Parsimonious linear fingerprinting for time series.pdf:PDF},
+  issn       = {2150-8097},
   issue      = {1-2},
   issue_date = {September 2010},
   numpages   = {12},
   owner      = {leili},
-  publisher  = {VLDB Endowment},
   slides     = {pubs/li-vldb10-plif-slides.pdf},
   software   = {software/plif-r345.zip},
   timestamp  = {2011.03.05},
@@ -1363,21 +1363,21 @@ clickbait detection and generic text classification tasks demonstrate that our p
   timestamp = {2009.03.04},
 }
 
-@Article{guo2008c,
+@InProceedings{guo2008c,
   author    = {Guo, Fan and Li, Lei and Faloutsos, Christos and Xing, Eric P.},
-  journal   = {The Proceedings of the Very Large Data Bases Endowment (VLDB)},
-  title     = {{C-DEM}: a multi-modal query system for Drosophila Embryo databases},
+  booktitle = {the Proceedings of the Very Large Data Bases Endowment (VLDB)},
+  title     = {{C-DEM}: a Multi-modal Query System for Drosophila Embryo Databases},
   year      = {2008},
-  issn      = {2150-8097},
   month     = aug,
   pages     = {1508--1511},
+  publisher = {VLDB Endowment},
   volume    = {1},
   acmid     = {1454214},
   file      = {:pubs/guo2008c - C-DEM_ a multi-modal query system for Drosophila Embryo databases.pdf:PDF},
+  issn      = {2150-8097},
   issue     = {2},
   numpages  = {4},
   owner     = {leili},
-  publisher = {VLDB Endowment},
   timestamp = {2009.11.20},
 }
 
