--- a/leili.bib
+++ b/leili.bib
@@ -89,6 +89,7 @@
   title     = {Finding Sparse Structure for Domain Specific Neural Machine Translation},
   year      = {2021},
   month     = feb,
+  eprint    = {https://arxiv.org/abs/2012.10586},
   owner     = {lilei.02},
 }
 
@@ -107,6 +108,8 @@
   title     = {Taxonomy Completion via Triplet Matching Network},
   year      = {2021},
   month     = feb,
+  code      = {https://github.com/JieyuZ2/TMN},
+  eprint    = {https://arxiv.org/abs/2101.01896},
   owner     = {lilei.02},
 }
 
