--- a/leili.bib
+++ b/leili.bib
@@ -44,6 +44,17 @@
   year   = {2100},
 }
 
+@InProceedings{xie2021mars,
+  author    = {Yutong Xie and Chence Shi and Hao Zhou and Yuwei Yang and Weinan Zhang and Yong Yu and Lei Li},
+  booktitle = {International Conference on Learning Representations (ICLR)},
+  title     = {{MARS}: Markov Molecular Sampling for Multi-objective Drug Discovery},
+  year      = {2021},
+  month     = may,
+  abstract  = {Searching for novel molecules with desired chemical properties is crucial in drug discovery.  Existing work focuses on developing deep generative models to generate either sequences or chemical molecular graphs. However, it remains a great challenge to find novel and diverse compounds satisfying many properties. In this paper, we propose MARS, a method for multi-objective drug molecule discovery. MARS is based on the idea of generating the chemical candidates by iterative editing fragments of molecular graphs. To search for the best candidates, it employs an annealing scheme together with Markov chain Monte Carlo sampling (MCMC) on molecules. To further improve sample efficiency, MARS is equipped with a graph neural network (GNN) as the proposal for candidate edits on molecules, while the GNN is trained on-the-fly utilizing the sample paths in MCMC. Our experiments show that MARS achieves state-of-the-art performance in various multi-objective settings where molecular bio-activity, drug-likeness, and synthesizability are simultaneously considered.  In the most challenging setting where four objectives – bio-activities to two different targets, drug-likeness and synthesizability – are simultaneously  considered,  our  method  outperforms  the  state-of-the-art  significantly in a comprehensive evaluation.},
+  eprint    = {https://openreview.net/forum?id=kHSu4ebxFXY},
+  owner     = {lilei.02},
+}
+
 @InProceedings{song2021triangular,
   author    = {Zhenqiao Song and Jiaze Chen and Hao Zhou and Lei Li},
   booktitle = {Proceedings of the 14th International Conference on Web Search and Data Mining (WSDM)},
@@ -79,6 +90,7 @@
   title     = {ACMo: Angle-Calibrated Moment Methods for Stochastic Optimization},
   year      = {2021},
   month     = feb,
+  code      = {https://github.com/Xunpeng746/ACMo},
   eprint    = {https://arxiv.org/abs/2006.07065},
   owner     = {lilei.02},
 }
