--- a/leili.bib
+++ b/leili.bib
@@ -146,10 +146,11 @@
   title        = {The Volctrans Machine Translation System for WMT20},
   year         = {2020},
   month        = nov,
-  comment      = {Winning the Champion in German-French translation of WMT20!},
+  comment      = {Winner in WMT20 Machine Translation tasks of Chinese-English, German-English, French-German,  English-Khmer, and English-Pashto.},
   entrysubtype = {workshop},
   eprint       = {https://arxiv.org/abs/2010.14806},
   owner        = {lilei.02},
+  thumbnail    = {volctrans-logo-eng.png},
 }
 
 @InProceedings{xu2020volctrans,
@@ -158,6 +159,7 @@
   title        = {Volctrans Parallel Corpus Filtering System for WMT 2020},
   year         = {2020},
   month        = nov,
+  comment      = {Winner of WMT20 Parallel Corpus Filtering tasks on Pashto and Khmer languages.},
   entrysubtype = {workshop},
   eprint       = {https://arxiv.org/abs/2010.14029},
   owner        = {lilei.02},
