--- a/leili.bib
+++ b/leili.bib
@@ -146,7 +146,7 @@
   title        = {The Volctrans Machine Translation System for WMT20},
   year         = {2020},
   month        = nov,
-  comment      = {Winner in WMT20 Machine Translation tasks of Chinese-English, German-English, French-German,  English-Khmer, and English-Pashto.},
+  comment      = {Winner in WMT20 Machine Translation Contest of Chinese-English, German-English, French-German,  English-Khmer, and English-Pashto languages.},
   entrysubtype = {workshop},
   eprint       = {https://arxiv.org/abs/2010.14806},
   owner        = {lilei.02},
