--- a/leili.bib
+++ b/leili.bib
@@ -1,15 +1,49 @@
 % Encoding: UTF-8
 
+@InProceedings{wang2021auto,
+  author    = {Tao Wang and Chengqi Zhao and Mingxuan Wang and Lei Li and Deyi Xiong},
+  booktitle = {Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL) - industry track},
+  title     = {Auto Correcting in the Process of Translation -- Multi-task Learning Improves Dialogue Machine Translation},
+  year      = {2021},
+  eprint    = {https://arxiv.org/abs/2103.16189},
+  owner     = {lilei.02},
+}
+
+@InProceedings{wang2021cross,
+  author    = {Mingxuan Wang and Hongxiao Bai and Hai Zhao and Lei Li},
+  booktitle = {Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL) - industry track},
+  title     = {Cross-lingual supervision improves unsupervised neural machine translation},
+  year      = {2021},
+  eprint    = {https://arxiv.org/abs/2004.03137},
+  owner     = {lilei.02},
+}
+
+@InProceedings{wang2021lightseq,
+  author    = {Xiaohui Wang and Ying Xiong and Yang Wei and Mingxuan Wang and Lei Li},
+  booktitle = {Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL) - industry track},
+  title     = {{LightSeq}: A High Performance Inference Library for Transformers},
+  year      = {2021},
+  eprint    = {https://arxiv.org/abs/2010.13887},
+  owner     = {lilei.02},
+}
+
+@InProceedings{wang2021enpar,
+  author    = {Yijun Wang and Changzhi Sun and Yuanbin Wu and Hao Zhou and Lei Li and Junchi Yan},
+  booktitle = {Proceedings of European Chapter of the Association for Computational Linguistics (EACL)},
+  title     = {{ENPAR}: Enhancing Entity and Entity Pair Representations for Joint Entity Relation Extraction},
+  year      = {2021},
+  owner     = {lilei.02},
+}
+
 @InProceedings{long2021generative,
   author    = {Long, Quanyu and Wang, Mingxuan and Li, Lei},
-  booktitle = {Proceedings of the 2021 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (NAACL-HLT)},
+  booktitle = {Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)},
   title     = {Generative Imagination Elevates Machine Translation},
   year      = {2021},
   month     = jun,
   publisher = {Association for Computational Linguistics},
   abstract  = {There are thousands of languages on earth, but visual perception is shared among peoples. Existing multimodal neural machine translation (MNMT) methods achieve knowledge transfer by enforcing one encoder to learn shared representation across textual and visual modalities. However, the training and inference process heavily relies on well-aligned bilingual sentence - image triplets as input, which are often limited in quantity. In this paper, we hypothesize that visual imagination via synthesizing visual representation from source text could help the neural model map two languages with different symbols, thus helps the translation task. Our proposed end-to-end imagination-based machine translation model (ImagiT) first learns to generate semantic-consistent visual representation from source sentence, and then generate target sentence based on both text representation and imagined visual representation. Experiments demonstrate that our translation model benefits from visual imagination and significantly outperforms the text-only neural machine translation (NMT) baseline. We also conduct analyzing experiments, and the results show that imagination can help fill in missing information when performing the degradation strategy.},
   eprint    = {https://arxiv.org/abs/2009.09654},
-  location  = {Mexico City, Mexico},
   owner     = {lilei.02},
   timestamp = {2021-03-11},
 }
